# plot2vid

./: .gitignore  README.md  pyproject.toml
src/: plot2vid.py
src/plot2vid/: __init__.py
