[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "plot2vid"
version = "1.0.3"
description = "The easiest way to create animations using plots."
readme = "README.md"
authors = [{ name = "Franciszek Szewczyk", email = "szewczyk.franciszek02@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["plot", "animation", "video"]
dependencies = [
    "matplotlib>=3.6.0",
    "numpy>=1.24.3",
    "opencv_python>=4.6.0.66",
]
requires-python = ">=3.9"

[project.urls]
Homepage = "https://github.com/fszewczyk/plot2vid"

